<resources>
    <string name="app_name">BinarChallengeEmpat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_konfirmasi_password">Masukkan Konfirmasi Password</string>
    <string name="welcome">Welcome,</string>
    <string name="logout">Logout</string>
    <string name="float_add">Float Add</string>
    <string name="input_data">Input Data</string>
    <string name="masukkan_judul">Masukkan Judul</string>
    <string name="masukkan_catatan">Masukkan Catatan</string>
    <string name="input">Input</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit">edit</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="hapus">HAPUS</string>
    <string name="cancel">CANCEL</string>
    <string name="anda_belum_memiliki_note">Anda Belum Memiliki Note</string>
    <string name="yakin_ingin_logout">Yakin ingin Logout?</string>
    <string name="see_password">see password</string>
</resources>