<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_margin="10dp"
        style="@style/TextStyle"
        android:text="@string/hapus_data"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/btn_hapus"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:text="@string/hapus" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/red"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>