<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment"
    >

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextStyle"
        android:textSize="20sp"
        android:text="@string/welcome"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/btn_logout"
        style="@style/TextStyle"
        android:textSize="20sp"
        android:text="@string/logout"
        android:layout_margin="20dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tv_username"
        android:layout_alignParentBottom="true"
        tools:listitem="@layout/item_note"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_float_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_white_add_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/float_add"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>