<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp"
    android:elevation="4dp"
    android:translationZ="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/ll_btn"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_judul"
                style="@style/TextStyle"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_note"
                style="@style/TextStyle"
                android:layout_marginTop="5dp"
                android:text="@string/note"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp">
            <ImageView
                android:id="@+id/btn_edit"
                android:layout_margin="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_green_edit_24"
                android:contentDescription="@string/edit" />
            <ImageView
                android:id="@+id/btn_delete"
                android:layout_margin="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_red_delete_24"
                android:contentDescription="@string/edit" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>